# YOURlifex-Project

./: .gitignore  Dockerfile  Makefile  Readme.md  pyproject.toml
lifex_users_api/: config.py  customConversation.py  main.py
scripts/: deploy_cloud_run.sh
vocode-sdk-demo/: Dockerfile  package-lock.json  package.json
vocode-sdk-demo/src/components/: AudioVisualization.tsx  Conversation.tsx  ImageCarousel.jsx
